# Cellects

./: .gitattributes  .gitignore  404.html  LICENSE  LICENSE.odt  README.md  README_DEV_CHEATSHEET.md  UserManual.md  __main__.spec  create_dmg.sh  gitignore  index.html  installer.nsi  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  update_docs.py
.github/workflows/: _build_and_test.yml  ci.yml  desktop-build.yml  docs.yml  draft-pdf.yml  release.yml  windows-build.yml
_old_doc/: UserManual.md
advanced/: index.html
advanced/multiple-folders/: index.html
advanced/outputs/: index.html
advanced/parameters/: index.html
api/: index.html
api/SUMMARY/: index.html
api/cellects/: index.html
api/cellects/core/: index.html
api/cellects/display/: index.html
api/cellects/gui/: index.html
api/cellects/image/: index.html
api/cellects/image_analysis/: index.html
api/cellects/io/: index.html
api/cellects/simulation/: index.html
api/cellects/utils/: index.html
api/cellects/video/: index.html
conda/: env.yaml
contributing/: index.html
data/experiment/: image10.tif  image11.tif  image12.tif  image13.tif  image14.tif  image15.tif  image16.tif  image17.tif  image18.tif  image19.tif  image2.tif  image20.tif  image21.tif  image23.tif  image24.tif  image3.tif  image4.tif  image5.tif  image6.tif  image7.tif  image8.tif  image9.tif
data/experiments/f1/: image2.tif
data/input/: last_binary_img.tif  test_read_video.h5  test_read_video.npy  test_vstack.h5  test_vstack_tests.test_load_display_save.TestGetH5Keys.test_get_h5_keys.h5  test_vstack_tests.test_load_display_save.TestRemoveH5Keys.test_remove_h5_key.h5
data/output/: motion_analysis_frame.csv  motion_analysis_frame.pkl  motion_analysis_slope.csv  motion_analysis_thresh.pkl
data/single_experiment/: image13.tif  image15.tif  image17.tif  image19.tif  image20.tif  image24.tif  image6.tif
doc/: contributing.md  foreword.md  gen_api.py  getting-started.md  index.md  installation.md  license.md  troubleshooting.md  update_docs.py  use-cases.ipynb  use-cases.md  what-is-cellects.md
doc/advanced/: index.md  multiple-folders.md  outputs.md  parameters.md
doc/first-analysis/: data-localisation.md  image-analysis.md  index.md  video-tracking.md
doc/static/: extra.css  notebooks.css
first-analysis/: index.html
first-analysis/data-localisation/: index.html
first-analysis/image-analysis/: index.html
first-analysis/video-tracking/: index.html
foreword/: index.html
getting-started/: index.html
installation/: index.html
license/: index.html
paper/: paper.bib  paper.md
search/: search_index.json
src/cellects/: __main__.py  __main__.spec
src/cellects/config/: all_vars_dict.py
src/cellects/core/: __main__.spec  cellects_paths.py  cellects_threads.py  motion_analysis.py  one_image_analysis.py  one_video_per_blob.py  program_organizer.py  script_based_run.py
src/cellects/display/: bootstrap.py  image.py  param.py  plot.py  video.py
src/cellects/gui/: advanced_parameters.py  cellects.py  custom_widgets.py  first_window.py  if_several_folders_window.py  image_analysis_window.py  required_output.py  tab_test.py  ui_strings.py  video_analysis_window.py
src/cellects/icons/: myicon.icns
src/cellects/image/: image_segmentation.py  morphological_operations.py  network_functions.py  one_image_analysis.py  one_image_analysis_threads.py  shape_descriptors.py
src/cellects/image_analysis/: cell_leaving_detection.py  cluster_flux_study.py  connected_components_tracking.py  extract_exif.py  fractal_analysis.py  fractal_functions.py  image_segmentation.py  morphological_operations.py  network_analysis.py  (+7 more)
tests/: _base.py  test_based_run.py  test_cell_leaving_detection.py  test_cellects_threads.py  test_cluster_flux_study.py  test_display.py  test_formulas.py  test_growth_features.py  test_image_segmentation.py  test_integration.py  test_load.py  test_load_display_save.py  test_morphological_operations.py  test_motion_analysis.py  test_network_functions.py  test_one_image_analysis.py  test_one_video_per_blob.py  test_oscillations_functions.py  test_program_organizer.py  test_progressively_add_distant_shapes.py  test_save.py  test_shape_descriptors.py  test_simulations.py  test_utilitarian.py
troubleshooting/: index.html
use-cases/: index.html
what-is-cellects/: index.html
(+108 files in other folders)
