[tool.poetry]
name = "Cellects"
version = "1.0.0"
description = "Cell Expansion Computer Tracking Software."
authors = ["Aurèle Boussard"]
license = "GNU General Public License v3.0"
readme = "README.md"
include = ["cellects/icons/cellects_icon"]

[tool.poetry.scripts]
Cellects = "cellects.__main__:run_cellects"

#[tool.poetry.files]
#Cellects = "cellects.config.all_vars:run_cellects"
#devtest = {reference = "cellects.test:test.run_cellects_tests", extras = ["test"], type = "console" }

[tool.poetry.dependencies]
python = ">3.9,<3.13"
coloredlogs = "^15.0.1"
exif = "^1.6.0"
ExifRead = "^3.0.0"
numba = "^0.58.1"
opencv-python = "^4.8.1.78"
pandas = "*"
psutil = "^5.9.6"
PySide6 = "^6.5.2"
rawpy = "^0.18.1"
scipy = "^1.11.3"
screeninfo = "^0.8.1"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
h5py = "^3.10.0"
typing-extensions = "^4.8.0"
wheel = "^0.41.3"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/Aurele-B/Cellects"