[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellects"
version = "1.0.0"
description = "Cell Expansion Computer Tracking Software."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "Aurèle Boussard" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "coloredlogs",
  "exif",
  "ExifRead",
  "numba",
  "opencv-python",
  "pandas",
  "psutil",
  "PySide6>=6.5",
  "scipy",
  "screeninfo",
  "numpy>=1.26",
  "scikit-image",
  "tqdm",
  "h5py",
  "matplotlib",
  "natsort",
]

[project.scripts]
Cellects = "cellects.__main__:run_cellects"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/Aurele-B/Cellects"
Issues = "https://github.com/Aurele-B/Cellects/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# include every file under icons/ (recursively)
cellects = ["icons/**"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.unittest]
pattern = "test_*.py"
start-directory = "tests"