[build-system]
requires = ["setuptools==76.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellects"
version = "0.3.7"
description = "Cell Expansion Computer Tracking Software."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "Aurèle Boussard" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "coloredlogs",
  "exif",
  "ExifRead",
  "numba",
  "opencv-python",
  "pandas",
  "psutil",
  "PySide6>=6.5",
  "scipy",
  "screeninfo",
  "numpy>=1.26",
  "scikit-image",
  "tqdm",
  "h5py",
  "matplotlib",
  "natsort",
]

[project.scripts]
Cellects = "cellects.__main__:run_cellects"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-env",
  "pytest-cov",
]
doc = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-autorefs",
  "pymdown-extensions",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
  "mkdocs-jupyter",
]

[project.urls]
Homepage = "https://github.com/Aurele-B/Cellects"
Issues = "https://github.com/Aurele-B/Cellects/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cellects = ["icons/**"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/cellects --cov-report=term-missing --cov-report=html"

[tool.pytest_env]
USE_NUMBA = "0"

[tool.coverage.run]
omit = [
    "src/cellects/gui/*",
    "src/cellects/utils/load_display_save.py",
    "src/cellects/core/cellects_threads.py",
    "src/cellects/core/script_based_run.py",
    "src/cellects/__main__.py",
    "src/cellects/paper_illustrations/*",
]